@@ -8,6 +8,8 @@
 	
 		<section id="content" class="primary" role="main">
 		
+		<?php if ( function_exists( 'themezee_breadcrumbs' ) ) themezee_breadcrumbs(); ?>
+			
 		<?php // Display Featured Post Slideshow if activated
 		if ( isset($theme_options['slider_activated_blog']) and $theme_options['slider_activated_blog'] == true ) :
 
