@@ -5,6 +5,7 @@ Smartline Lite Changelog
 Version 1.3.1
 -----------------------------------
 [added] basic support for wooCommerce
+[added] support for ThemeZee Breadcrumbs plugin
 [added] email icon to social menu
 
 Version 1.3.0
